top画面の作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,21 +12,32 @@
 
   <body>
   <header>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to '投稿フォーム', new_book_path %>
-      </li>
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-    <% end %>
+    <div class="header-nav">
+      <a href="/" class="headline"><span>Bookers</span></a>
+      <nav class="nav-list">
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to '投稿フォーム', new_book_path %>
+          </li>
+          <li>
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+          </li>
+        <% else %>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <%= link_to "About", about_path %>
+          </li>
+          <li>
+            <%= link_to "Sign up", new_user_registration_path %>
+          </li>
+          <li>
+            <%= link_to "Log in", new_user_session_path %>
+          </li>
+        <% end %>
+      </nav><!-- /.nav-list -->
+    </div><!-- /.header-nav -->
   </header>
   <%= yield %>
   </body>
