--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,14 @@
-<h1>トップページ</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>WebCampBackendNew</title>
+    <link rel="stylesheet" href="/assets/application.css">
+  </head>
+
+  <body>
+    <h1>welcom to <span class="font-bold">Bookers</span>!!</h1>
+    <p>In <span class="font-bold">Bookers</span>,</p>
+    <p>you can share and exchange your opinions , inpressions , and emotions</p>
+    <p>about various books!</p>
+  </body>
+</html
