linkの間違い訂正中

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,28 +17,57 @@
       <nav class="nav-list">
         <% if user_signed_in? %>
           <li>
-            <%= link_to '投稿フォーム', new_book_path %>
+            <%= link_to 'Home', new_book_path %><!-- 修正必要 -->
           </li>
           <li>
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-          </li>
-        <% else %>
-          <li>
-            <a href="/">Home</a>
+            <%= link_to 'Users', users_path %>
           </li>
           <li>
-            <%= link_to "About", about_path %>
+            <%= link_to 'Books', books_path %>
           </li>
           <li>
-            <%= link_to "Sign up", new_user_registration_path %>
+            <%= link_to "Log out", destroy_user_session_path, method: :delete %>
           </li>
-          <li>
-            <%= link_to "Log in", new_user_session_path %>
-          </li>
-        <% end %>
       </nav><!-- /.nav-list -->
     </div><!-- /.header-nav -->
+
+    <div class="user-info">
+      <h2>User info</h2>
+    </div>
+    <table class="user-info-table">
+      <tbody>
+        <tr>
+          <th>name</th>
+          <th>introduction</th>
+        </tr>
+      </tbody>
+    </table>
+    <div class="user-info-edit">
+    </div>
+
+        <% else %>
+        <div class="header-nav">
+          <nav class="nav-list">
+            <li>
+              <a href="/">Home</a>
+            </li>
+            <li>
+              <%= link_to "About", about_path %>
+            </li>
+            <li>
+              <%= link_to "Sign up", new_user_registration_path %>
+            </li>
+            <li>
+              <%= link_to "Log in", new_user_session_path %>
+            </li>
+          </nav><!-- /.nav-list -->
+        </div><!-- /.header-nav -->
+        <% end %>
   </header>
   <%= yield %>
+
+  <footer>
+    <p>CopyRight Infratop.inc</p>
+  </footer>
   </body>
 </html>
