--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,5 +10,12 @@
     <p>In <span class="font-bold">Bookers</span>,</p>
     <p>you can share and exchange your opinions , inpressions , and emotions</p>
     <p>about various books!</p>
+
+    <div class="button-log_in">
+      <a class="btn" href="/users/sign_in">Log in</a>
+    </div><!-- /.button-log_in -->
+    <div class="button-sign_up">
+      <a class="btn" href="/users/sign_up">Sign up</a>
+    </div><!-- /.button-sign_up -->
   </body>
 </html
