--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <%= link_to 'Home', new_book_path %><!-- 修正必要 -->
           </li>
           <li>
-            <%= link_to 'Users', users_path %>
+            <%= link_to 'Users', users_show_path %><!-- 修正必要 -->
           </li>
           <li>
             <%= link_to 'Books', books_path %>
