--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,69 +5,74 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" media="all" href="/packs/css/application-859f38f5.css" data-turbolinks-track="reload">
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
   <header>
-    <div class="header-nav">
-      <a href="/" class="headline"><span>Bookers</span></a>
-      <nav class="nav-list">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a href="/" class="navbar-brand"><span>Bookers</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
         <% if user_signed_in? %>
           <li>
-            <%= link_to 'Home', new_book_path %><!-- 修正必要 -->
+            <a class="nav-link text-light" href="/users/61540">
+            <i class="fas fa-home"></i> Home</a>
           </li>
           <li>
-            <%= link_to 'Users', users_show_path %><!-- 修正必要 -->
+            <a class="nav-link text-light" href="/users">
+            <i class="fas fa-users"></i> Users</a>
           </li>
           <li>
-            <%= link_to 'Books', books_path %>
+            <a class="nav-link text-light" href="/books">
+            <i class="fas fa-book-open"></i> Books</a>
           </li>
           <li>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+            <a class="nav-link text-light" rel="nofollow" data-method="delete" href="/users/sign_out">
+            <i class="fas fa-sign-out-alt"></i> Log out</a>
           </li>
-      </nav><!-- /.nav-list -->
-    </div><!-- /.header-nav -->
-
-    <div class="user-info">
-      <h2>User info</h2>
-    </div>
-    <table class="user-info-table">
-      <tbody>
-        <tr>
-          <th>name</th>
-          <th>introduction</th>
-        </tr>
-      </tbody>
-    </table>
-    <div class="user-info-edit">
-    </div>
-
         <% else %>
-        <div class="header-nav">
-          <nav class="nav-list">
-            <li>
-              <a href="/">Home</a>
-            </li>
-            <li>
-              <%= link_to "About", about_path %>
-            </li>
-            <li>
-              <%= link_to "Sign up", new_user_registration_path %>
-            </li>
-            <li>
-              <%= link_to "Log in", new_user_session_path %>
-            </li>
-          </nav><!-- /.nav-list -->
-        </div><!-- /.header-nav -->
+          <li>
+            <a class="nav-link text-light" href="/">
+            <i class="fas fa-home"></i> Home</a>
+          </li>
+          <li>
+            <a class="nav-link text-light" href="/homes/about">
+            <i class="fas fa-link"></i> About</a>
+          </li>
+          <li>
+            <a class="nav-link text-light" href="/users/sign_up">
+            <i class="fas fa-user-plus"></i> Sign up</a>
+          </li>
+          <li>
+            <a class="nav-link text-light" href="/users/sign_in">
+            <i class="fas fa-sign-in-alt"></i> Log in</a>
+          </li>
         <% end %>
+        </ul>
+        </div>
+      </div>
+    </nav>
   </header>
   <%= yield %>
 
-  <footer>
-    <p>CopyRight Infratop.inc</p>
-  </footer>
-  </body>
+<footer>
+  <div class='container mt-5'>
+  	<div class='row'>
+    	<div class='mx-auto'>
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
+</footer>
+
+</body>
 </html>
