--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,63 @@
-<% @books.each do |book| %>
-<div>
-  <%= image_tag book.get_image %>
-  <p>ユーザーネーム：<%= book.user.name %></p>
-</div>
-<% end %>
+    <main>
+      <div class='container px-5 px-sm-0'>
+    <div class='row'>
+      <div class='col-md-3'>
+      <h2>User info</h2>
+      <table class='table'>
+        <tr><%= image_tag @user.get_profile_image %></tr>
+        <tr>
+          <th>name</th>
+          <th><%= current_user.name %></th>
+        </tr>
+        <tr>
+    	     <th>introduction</th>
+    	     <th></th>
+    	 </tr>
+      </table>
+
+    <div class='row'>
+      <a class="btn btn-outline-secondary btn-block edit_user_61557" href="#">
+      <i class="fas fa-user-cog"></i></a>
+    </div>
+    <h2 class="mt-3">New book</h2>
+      <form action="/books" accept-charset="UTF-8" method="post"><input type="hidden" name="authenticity_token" value="PwzPonDFecTP94G3vM1z7Kni8XnDKcqYVXMFgYvVyjkDNAxmZ-On90MfBCDRaRo80j0rzRnGb1ItSntG4C0i7A" autocomplete="off" />
+        <div class="form-group">
+          <label for="book_title">Title</label>
+          <input class="form-control book_title" type="text" name="book[title]" id="book_title" />
+        </div>
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label>
+          <textarea class="form-control book_body" name="book[body]" id="book_body"></textarea>
+        </div>
+        <div class="form-group">
+          <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
+        </div>
+      </form>
+    </div>
+    <div class='col-md-8 offset-md-1'>
+      <h2>Books</h2>
+      <table class='table table-hover table-inverse'>
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @books.each do |book| %>
+            <tr>
+              <td></td>
+              <td><%= book.title %></td>
+              <td><%= book.body %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      </div>
+    </div>
+  </div>
+  </main>
+  </body>
+</html>
