--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebCampBackendNew</title>
-    <link rel="stylesheet" href="/assets/application.css">
+  <head>
+    <title>Bookers2</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" media="all" href="/packs/css/application-859f38f5.css" data-turbolinks-track="reload">
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <h1>welcom to <span class="font-bold">Bookers</span>!!</h1>
-    <p>In <span class="font-bold">Bookers</span>,</p>
-    <p>you can share and exchange your opinions , inpressions , and emotions</p>
-    <p>about various books!</p>
-
-    <div class="button-log_in">
-      <a class="btn" href="/users/sign_in">Log in</a>
-    </div><!-- /.button-log_in -->
-    <div class="button-sign_up">
-      <a class="btn" href="/users/sign_up">Sign up</a>
-    </div><!-- /.button-sign_up -->
-  </body>
-</html
+  <main>
+    <p id="notice"></p>
+    <div class="container">
+      <div class="row">
+        <div class='mx-auto col-11 col-sm-10 col-lg-8 col-xl-6'>
+          <h1>welcome to <i class="fas fa-book"></i><strong>Bookers</strong>  !!</h1>
+          <p>In  <i class="fas fa-book"></i><strong>Bookers</strong>, </p>
+          <p>you can share and exchange  your opinions , inpressions , and emotions</p>
+          <p> about various books!</p>
+          <div class="btn-wrapper col-10 mx-auto">
+          <div class="row">
+            <a class="btn btn-info btn-sm btn-block mb-3 sign_in" href="/users/sign_in">Log in</a>
+          </div>
+          <div class="row">
+            <a class="btn btn-success btn-sm btn-block sign_up" href="/users/sign_up">Sign up</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+</body>
+</html>
