--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,19 +20,14 @@
       <i class="fas fa-user-cog"></i></a>
     </div>
     <h2 class="mt-3">New book</h2>
-      <form action="/books" accept-charset="UTF-8" method="post"><input type="hidden" name="authenticity_token" value="PwzPonDFecTP94G3vM1z7Kni8XnDKcqYVXMFgYvVyjkDNAxmZ-On90MfBCDRaRo80j0rzRnGb1ItSntG4C0i7A" autocomplete="off" />
-        <div class="form-group">
-          <label for="book_title">Title</label>
-          <input class="form-control book_title" type="text" name="book[title]" id="book_title" />
-        </div>
-        <div class="form-group">
-          <label for="book_opinion">Opinion</label>
-          <textarea class="form-control book_body" name="book[body]" id="book_body"></textarea>
-        </div>
-        <div class="form-group">
-          <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
-        </div>
-      </form>
+    <%= form_with model: @book do |f| %>
+      <h4 class="new-book-title">Title</h4>
+        <%= f.text_field :title , class:"form-control book_title" , id:"book_title" %>
+      <h4 class="new-book-body">Opinion</h4>
+        <%= f.text_area :body , class:"form-control book_body" , id:"book_body"%>
+      <%= f.submit 'Create Book' , class:"btn btn-success" %>
+    <% end %>
+
     </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
