--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,1 +1,47 @@
-<h1>showページ</h1>
+    <main>
+      <div class='container px-5 px-sm-0'>
+    <div class='row'>
+      <div class='col-md-3'>
+      <h2>User info</h2>
+      <table class='table'>
+      <tr><%= image_tag @user.get_profile_image %></tr>
+        <tr>
+          <th>name</th>
+          <th><%= current_user.name %></th>
+        </tr>
+        <tr>
+    	     <th>introduction</th>
+    	     <th></th>
+    	 </tr>
+      </table>
+      <div class='row'>
+      <a class="btn btn-outline-secondary btn-block edit_user_61557" href="#">
+      <i class="fas fa-user-cog"></i></a>
+    </div>
+    <h2 class="mt-3">New book</h2>
+    <%= form_with model: @book do |f| %>
+      <h4 class="new-book-title">Title</h4>
+        <%= f.text_field :title , class:"form-control book_title" , id:"book_title" %>
+      <h4 class="new-book-body">Opinion</h4>
+        <%= f.text_area :body , class:"form-control book_body" , id:"book_body"%>
+      <%= f.submit 'Create Book' , class:"btn btn-success" %>
+    <% end %>
+
+    </div>
+    <div class='col-md-8 offset-md-1'>
+      <h2>Book detail</h2>
+        <table class='table'>
+    		  <tr>
+            <td></td>
+            <td><%= @book.title %></td>
+            <td><%= @book.body %></td>
+            <td><a class="btn btn-sm btn-success edit_book_46536" href="#">Edit</a></td><!-- link_to? -->
+            <td><a class="btn btn-sm btn-danger destroy_book_46536" rel="nofollow" data-method="delete" href="#">Destroy</a></td><!-- link_to? -->
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
+  </main>
+  </body>
+</html>
