バリデーションの実装

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -3,7 +3,10 @@
 
 //
 .new-book-title,
-.new-book-body {
+.new-book-body,
+.user-eidt-name,
+.user-edit-image,
+.user-edit-intro {
   font-size: 16px;
   font-weight: normal;
 
