--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,22 +1,25 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Bookeres2</title>
-    <link rel="stylesheet" href="/assets/application.css">
-  </head>
-
-  <body>
-    <h2>User info</h2>
-
-     <%= form_with model: @user do |f| %>
-
-    <p>Name</p>
-      <%= f.text_field :title %>
-    <p>Image</p>
-      <%= f.file_field :image, accept: "image/*" %>
-    <p>Introduction</p>
-      <%= f.text_area :body %>
-    <%= f.submit 'Update User' %>
-  <% end %>
-  </body>
-</html
+<div class='container'>
+  <div class='row'>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+      <%= form_with model: @user do |f| %>
+      <div class="form-group">
+        <h4 class="user-eidt-name">Name</h4>
+        <%= f.text_field :name , class:"form-control name" , id:"user_name"%>
+      </div>
+      <div class="form-group">
+        <h4 class="user-edit-image">Image</h4>
+        <%= f.file_field :profile_image, accept: "image/*" , class:"form-control-file user_image" , id:"user_profile_image"%>
+      </div>
+      <div class="form-group">
+        <h4 class="user-edit-intro">Introduction</h4>
+        <%= f.text_area :introduction , class:"form-control introduction" , id:"user_introduction"%>
+      </div>
+      <div class="form-group">
+        <%= f.submit 'Update User' , class:"btn btn-secondary" %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+</main>
