--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,23 +1,34 @@
-    <main>
-      <div class='container px-5 px-sm-0'>
-    <div class='row'>
-      <div class='col-md-3'>
+<div class='container px-5 px-sm-0'>
+  <div id="error_explanation">
+    <% if @book.errors.any? %>
+      <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
+  <div class='row'>
+    <div class='col-md-3'>
+
       <h2>User info</h2>
       <table class='table'>
-        <tr><%= image_tag @user.get_profile_image %></tr>
+        <tr><%= image_tag @user.get_profile_image(100,100) %></tr>
         <tr>
           <th>name</th>
           <th><%= current_user.name %></th>
         </tr>
         <tr>
-    	     <th>introduction</th>
-    	     <th></th>
-    	 </tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+          </tr>
       </table>
 
     <div class='row'>
-      <a class="btn btn-outline-secondary btn-block edit_user_61557" href="#">
-      <i class="fas fa-user-cog"></i></a>
+      <%= link_to  edit_user_path(@user.id) , class:"btn btn-outline-secondary btn-block" do %>
+        <i class="fas fa-user-cog"></i>
+      <% end %>
     </div>
     <h2 class="mt-3">New book</h2>
     <%= form_with model: @book do |f| %>
@@ -27,32 +38,33 @@
         <%= f.text_area :body , class:"form-control book_body" , id:"book_body"%>
       <%= f.submit 'Create Book' , class:"btn btn-success" %>
     <% end %>
-
-    </div>
+  </div>
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
       <table class='table table-hover table-inverse'>
-        <thead>
+      <thead>
+        <tr>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @books.each do |book| %>
           <tr>
-            <th></th>
-            <th>Title</th>
-            <th>Opinion</th>
-            <th colspan="3"></th>
+            <td>
+              <%= link_to user_path(@user.id) do %>
+                <%= image_tag @user.get_profile_image(80,80) %>
+              <% end %>
+            </td>
+            <td><%= link_to book.title , "/books/#{book.id}"%></td>
+            <td><%= book.body %></td>
           </tr>
-        </thead>
-        <tbody>
-          <% @books.each do |book| %>
-            <tr>
-              <td></td>
-              <td><%= book.title %></td>
-              <td><%= book.body %></td>
-            </tr>
-          <% end %>
-        </tbody>
+        <% end %>
+      </tbody>
       </table>
-      </div>
     </div>
   </div>
-  </main>
-  </body>
-</html>
+</div>
+</main>
