--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,48 +21,64 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-        <% if user_signed_in? %>
-          <li>
-            <a class="nav-link text-light" href="/users/61540">
-            <i class="fas fa-home"></i> Home</a>
-          </li>
-          <li>
-            <a class="nav-link text-light" href="/users">
-            <i class="fas fa-users"></i> Users</a>
-          </li>
-          <li>
-            <a class="nav-link text-light" href="/books">
-            <i class="fas fa-book-open"></i> Books</a>
-          </li>
-          <li>
-            <a class="nav-link text-light" rel="nofollow" data-method="delete" href="/users/sign_out">
-            <i class="fas fa-sign-out-alt"></i> Log out</a>
-          </li>
-        <% else %>
-          <li>
-            <a class="nav-link text-light" href="/">
-            <i class="fas fa-home"></i> Home</a>
-          </li>
-          <li>
-            <a class="nav-link text-light" href="/homes/about">
-            <i class="fas fa-link"></i> About</a>
-          </li>
-          <li>
-            <a class="nav-link text-light" href="/users/sign_up">
-            <i class="fas fa-user-plus"></i> Sign up</a>
-          </li>
-          <li>
-            <a class="nav-link text-light" href="/users/sign_in">
-            <i class="fas fa-sign-in-alt"></i> Log in</a>
-          </li>
-        <% end %>
-        </ul>
+          <ul class="navbar-nav ml-auto">
+          <% if user_signed_in? %>
+            <li>
+              <%= link_to user_path(current_user.id) , class:"nav-link text-light" do %>
+                <i class="fas fa-home"></i> Home
+              <% end %>
+            </li>
+            <li>
+              <%= link_to users_path , class:"nav-link text-light" do %>
+                <i class="fas fa-users"></i> Users
+              <% end %>
+            </li>
+            <li>
+              <%= link_to books_path , class:"nav-link text-light" do %>
+                <i class="fas fa-book-open"></i> Books</a>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to destroy_user_session_path , method:"delete" , class:"nav-link text-light" do %>
+                <i class="fas fa-sign-out-alt"></i> Log out</a>
+              <% end %>
+            </li>
+          <% else %>
+            <li>
+              <%= link_to root_path , class:"nav-link text-light" do %>
+                <i class="fas fa-home"></i> Home</a>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to about_path , class:"nav-link text-light" do %>
+                <i class="fas fa-link"></i> About</a>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to new_user_registration_path , class:"nav-link text-light" do %>
+                <i class="fas fa-user-plus"></i> Sign up</a>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to new_user_session_path , class:"nav-link text-light" do %>
+                <i class="fas fa-sign-in-alt"></i> Log in</a>
+              <% end %>
+            </li>
+          <% end %>
+          </ul>
         </div>
       </div>
     </nav>
   </header>
+  <main>
+    <p id="notice">
+      <% flash.each do |message_type, message| %>
+        <%= message %>
+      <% end %>
+    </p>
   <%= yield %>
+
+
 
 <footer>
   <div class='container mt-5'>
