--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,52 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Bookeres2</title>
-    <link rel="stylesheet" href="/assets/application.css">
-  </head>
+<div class='container px-5 px-sm-0'>
+<div class='row'>
+  <div class='col-md-3'>
+  <h2>User info</h2>
+  <table class='table'>
+    <tr><%= image_tag @user.get_profile_image(100,100) %></tr>
+  	  <th>name</th>
+  	  <th><%= current_user.name %></th>
+    </tr>
+    <tr>
+  	  <th>introduction</th>
+  	  <th><%= @user.introduction %></th>
+    </tr>
+  </table>
 
-  <body>
-    <% @users.each do |user| %>
-    <div>
-      <%= image_tag user.get_image %>
-      <p>投稿ユーザー画像：<%= image_tag 'sample-author1.jpg' %></p>
-      <p>ショップ名：<%= user.shop_name %></p>
-      <p>説明：<%= user.caption %></p>
-      <p>ユーザーネーム：<%= user.user.name %></p>
-    </div>
-    <% end %>
-  </body>
-</html
+<div class='row'>
+  <%= link_to  edit_user_path(@user.id) , class:"btn btn-outline-secondary btn-block" do %>
+    <i class="fas fa-user-cog"></i>
+  <% end %>
+</div>
+<h2 class="mt-3">New book</h2>
+  <%= form_with model: @book do |f| %>
+    <h4 class="new-book-title">Title</h4>
+      <%= f.text_field :title , class:"form-control book_title" , id:"book_title" %>
+    <h4 class="new-book-body">Opinion</h4>
+      <%= f.text_area :body , class:"form-control book_body" , id:"book_body"%>
+      <%= f.submit 'Create Book' , class:"btn btn-success" %>
+  <% end %>
+
+  </div>
+  <div class='col-md-8 offset-md-1'>
+    <h2>Users</h2>
+    <table class='table'>
+    <thead>
+      <tr>
+        <th>image</th>
+        <th>name</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><%= image_tag @user.get_profile_image(80,80) %></td>
+        <td><%= current_user.name %></td>
+        <td><%= link_to 'Show' , user_path(@user.id) %></td>
+      </tr>
+    </tbody>
+    </table>
+  </div>
+  </div>
+</div>
+</main>
