--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,55 @@
-<h1>New book</h1>
-  <%= form_with model: @user do |f| %>
-    <!--<h4>画像</h4>-->
-      <!--<%= f.file_field :image, accept: "image/*" %>-->
-    <h4>Title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
+<div class='container px-5 px-sm-0'>
+<div class='row'>
+  <div class='col-md-3'>
+  <h2>User info</h2>
+  <table class='table'>
+    <tr><%= image_tag @user.get_profile_image(100,100) %></tr>
+  	  <th>name</th>
+  	  <th><%= current_user.name %></th>
+    </tr>
+    <tr>
+  	  <th>introduction</th>
+  	  <th><%= @user.introduction %></th>
+    </tr>
+  </table>
+
+<div class='row'>
+  <%= link_to  edit_user_path(@user.id) , class:"btn btn-outline-secondary btn-block" do %>
+    <i class="fas fa-user-cog"></i>
   <% end %>
+</div>
+<h2 class="mt-3">New book</h2>
+  <%= form_with model: @book do |f| %>
+    <h4 class="new-book-title">Title</h4>
+      <%= f.text_field :title , class:"form-control book_title" , id:"book_title" %>
+    <h4 class="new-book-body">Opinion</h4>
+      <%= f.text_area :body , class:"form-control book_body" , id:"book_body"%>
+      <%= f.submit 'Create Book' , class:"btn btn-success" %>
+  <% end %>
+
+  </div>
+  <div class='col-md-8 offset-md-1'>
+    <h2>Books</h2>
+    <table class='table'>
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @books.each do |book| %>
+        <tr>
+          <td><%= image_tag @user.get_profile_image(80,80) %></td>
+          <td><%= link_to book.title , "/books/#{book.id}"%></td>
+          <td><%= book.body %></td>
+        </tr>
+      <% end %>
+    </tbody>
+    </table>
+  </div>
+  </div>
+</div>
+</main>
