他ユーザーの画面設定中

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -39,11 +39,13 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td><%= image_tag @user.get_profile_image(80,80) %></td>
-        <td><%= current_user.name %></td>
-        <td><%= link_to 'Show' , user_path(@user.id) %></td>
-      </tr>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= image_tag @user.get_profile_image(80,80) %></td>
+          <td><%= user.name %></td>
+          <td><%= link_to 'Show' , user_path(user.id) %></td>
+        </tr>
+      <% end %>
     </tbody>
     </table>
   </div>
