--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 <div class='container px-5 px-sm-0'>
   <div id="error_explanation">
     <% if @book.errors.any? %>
-      <h3><%= @book.errors.count %> errors prohibited this obj from being saved:</h3>
+      <h3><%= pluralize(@book.errors.count, "error") %> prohibited this obj from being saved:</h3>
       <ul>
         <% @book.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -54,7 +54,7 @@
         <% @books.each do |book| %>
           <tr>
             <td>
-              <%= link_to user_path(@user.id) do %>
+              <%= link_to user_path(book.user.id) do %>
                 <%= image_tag @user.get_profile_image(80,80) %>
               <% end %>
             </td>
