--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,4 @@
 <div class='container px-5 px-sm-0'>
-
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
@@ -7,7 +6,7 @@
       <tr><%= image_tag @user.get_profile_image(100,100) %></tr>
         <tr>
           <th>name</th>
-          <th><%= current_user.name %></th>
+          <th><%= @user.name %></th>
         </tr>
         <tr>
           <th>introduction</th>
@@ -20,7 +19,7 @@
         <% end %>
       </div>
       <h2 class="mt-3">New book</h2>
-      <%= form_with model: @book do |f| %>
+      <%= form_with model: @new_book do |f| %>
         <h4 class="new-book-title">Title</h4>
           <%= f.text_field :title , class:"form-control book_title" , id:"book_title" %>
         <h4 class="new-book-body">Opinion</h4>
@@ -36,13 +35,15 @@
           <td>
             <%= link_to user_path(@user.id) do %>
               <%= image_tag @user.get_profile_image(100,100) %><br>
-              <%= current_user.name %>
+              <%= @user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title %></td>
           <td><%= @book.body %></td>
-          <td><%= link_to 'Edit' , edit_book_path(@book.id) , class:"btn btn-sm btn-success" %></td>
-          <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか?" , class:"btn btn-sm btn-danger" %></td>
+            <% if user_signed_in? && current_user.id == @book.user_id %>
+              <td><%= link_to 'Edit' , edit_book_path(@book.id) , class:"btn btn-sm btn-success" %></td>
+              <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => "本当に消しますか?" , class:"btn btn-sm btn-danger" %></td>
+            <% end %>
         </tr>
         </tbody>
       </table>
