--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,7 +4,7 @@
       <h2>User info</h2>
       <div id="error_explanation">
         <% if @user.errors.any? %>
-          <h3><%= @user.errors.count %> errors prohibited this obj from being saved:</h3>
+          <h3><%= pluralize(@user.errors.count, "error") %> prohibited this obj from being saved:</h3>
           <ul>
             <% @user.errors.full_messages.each do |message| %>
               <li><%= message %></li>
