--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
   </table>
 
 <div class='row'>
-  <%= link_to  edit_user_path(@user.id) , class:"btn btn-outline-secondary btn-block" do %>
+  <%= link_to edit_user_path(@user.id) , class:"btn btn-outline-secondary btn-block" do %>
     <i class="fas fa-user-cog"></i>
   <% end %>
 </div>
@@ -42,7 +42,11 @@
     <tbody>
       <% @books.each do |book| %>
         <tr>
-          <td><%= image_tag @user.get_profile_image(80,80) %></td>
+          <td>
+            <%= link_to user_path(book.user.id) do %>
+              <%= image_tag @user.get_profile_image(80,80) %>
+            <% end %>
+          </td>
           <td><%= link_to book.title , "/books/#{book.id}"%></td>
           <td><%= book.body %></td>
         </tr>
