--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
   <table class='table'>
     <tr><%= image_tag @user.get_profile_image(100,100) %></tr>
   	  <th>name</th>
-  	  <th><%= current_user.name %></th>
+  	  <th><%= @user.name %></th>
     </tr>
     <tr>
   	  <th>introduction</th>
